[package]
name = "whatport"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Find what process is listening on a TCP/UDP port, and free it. Agent-friendly: JSON when piped, clispec schema, structured errors."
authors = ["Ruben Jongejan <ruben.jongejan@gmail.com>"]
license = "MIT"
repository = "https://github.com/rvben/whatport"
homepage = "https://github.com/rvben/whatport"
keywords = ["port", "lsof", "netstat", "process", "kill"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
name = "whatport"
path = "src/lib.rs"

[[bin]]
name = "whatport"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
netstat2 = "0.11.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.3"
thiserror = "2.0.18"

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
